# quotes

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.db.yml  docker-compose.migrate.yml  docker-compose.yml
frontend/: Dockerfile  bun.lockb  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/assets/: main.css
frontend/src/components/: Alert.vue  AppHeader.vue  CardQuote.vue  MyButton.vue  MyInput.vue  MyTextarea.vue
frontend/src/router/: index.ts
frontend/src/stores/: index.ts
frontend/src/views/: CreateQuote.vue  HomeView.vue  LoginView.vue  MyQuotes.vue  RegisterView.vue
migrations/: 20231005012558_create_quote_author_table.sql  20231005013058_create_users_table.sql  20231005013352_create_quote_tags_table.sql  20231005013352_create_tags_table.sql  20231005013451_create_quotes_table.sql  20231005021033_create_quote_tags_table.sql
src/: app.rs  config.rs  context.rs  db.rs  lib.rs  main.rs  response.rs
src/database/: seeder.rs
src/error/: mod.rs
src/extractors/: mod.rs  required_authentication.rs
src/quote/: mod.rs  schema.rs
src/quote/model/: mod.rs  quote.rs  quote_author.rs
src/quote/repository/: create_quote.rs  get_quotes.rs  insert_one.rs  mod.rs
src/services/: mod.rs
src/services/quote/: mod.rs  schema.rs
src/services/quote/model/: mod.rs  quote.rs  quote_author.rs  quote_tag.rs
src/services/quote/repository/: get.rs  get_quotes.rs  insert.rs  insert_one.rs  mod.rs
src/services/user/: mod.rs  schema.rs
src/services/user/model/: mod.rs
src/user/: mod.rs
src/user/model/: mod.rs
src/user/repository/: mod.rs
src/utils/: request.rs  response.rs
(+1 files in other folders)
