[package]
name = "quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
