[package]
name = "quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
slug = "0.1.4"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
